--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="upcoming_live_stream">Upcoming\nLive Stream</string>
+    <string name="recent_event">Recent Event</string>
+    <string name="search">Search</string>
+    <string name="suggested_for_you">Suggested for you</string>
+    <string name="search_by_location">Search by location</string>
+    <string name="follow">Follow</string>
 </resources>
