--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,18 @@
     <string name="suggested_for_you">Suggested for you</string>
     <string name="search_by_location">Search by location</string>
     <string name="follow">Follow</string>
+    <string name="txt_activity">Activity</string>
+    <string name="accepted_request">Accepted Request</string>
+    <string name="view_sent_request">View sent Request</string>
+    <string name="accepted">Accepted</string>
+    <string name="cancel_request">Cancel Request</string>
+    <string name="following">Following</string>
+    <string name="edit_profile">Edit Profile</string>
+    <string name="about_me">About Me</string>
+    <string name="dummy_about_me">As conscious traveling Paupers we must always be concerned about our dear Mother Earth. If you think about it, you travel across her face, and She is the host to your journey; without Her we could not find the unfolding adventures that attract and feed</string>
+    <string name="following_events">Following Events</string>
+    <string name="view_all_events">View All Events</string>
+    <string name="incoming_request">Incoming Request</string>
+    <string name="event_activities">Event Activities</string>
+    <string name="txt_cancel">Cancel</string>
 </resources>
