--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,13 @@
     <string name="followed_by">Followed By</string>
     <string name="time">Time :</string>
     <string name="date">Date :</string>
+    <string name="enter_name">Enter Name</string>
+    <string name="enter_email">Enter Email</string>
+    <string name="enter_valid_email">Enter Valid Email</string>
+    <string name="enter_password">Enter Password</string>
+    <string name="enter_confirm_password">Enter Confirm Password</string>
+    <string name="password_must_be_same">Password and Confirm Password mustbe same.</string>
+    <string name="no_internet_connection">No Internet Connection</string>
+    <string name="something_wants_wrong">Something wants wrong</string>
+    <string name="please_try_after_some_time">Please try after some time.</string>
 </resources>
