--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,9 @@
     <string name="no_internet_connection">No Internet Connection</string>
     <string name="something_wants_wrong">Something wants wrong</string>
     <string name="please_try_after_some_time">Please try after some time.</string>
+    <string name="male">Male</string>
+    <string name="female">Female</string>
+    <string name="choose_image_from">Choose imge from</string>
+    <string name="camera">Camera</string>
+    <string name="gallery">Gallery</string>
 </resources>
