--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,4 +80,5 @@
     <string name="enter_event_end_time">Enter Event End Date</string>
     <string name="start_end_time_not_valid_msg">Event Start Time must be before Event End Time</string>
     <string name="enter_comment">Enter Comment</string>
+    <string name="add_atleast_one_image">Add atleast one image</string>
 </resources>
