--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="google_place_key" translatable="false">AIzaSyBEB2zJn18Cv4Djrmn8sEgbGgLa_2EKKdE</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="upcoming_live_stream">Upcoming\nLive Stream</string>
+    <string name="live_stream">Live Stream</string>
     <string name="recent_event">Recent Event</string>
     <string name="search">Search</string>
     <string name="suggested_for_you">Suggested for you</string>
