--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,4 +103,5 @@
     <string name="time_tag">Time : %1s</string>
     <string name="date_tag">Date : %1s</string>
     <string name="delete">Delete</string>
+    <string name="dj">DJ</string>
 </resources>
