--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="following_events">Following Events</string>
     <string name="view_all_events">View All Events</string>
     <string name="incoming_request">Incoming Request</string>
-    <string name="event_activities">Event Activities</string>
+    <string name="event_activities">Activities</string>
     <string name="txt_cancel">Cancel</string>
     <string name="request_for_live_streaming">Request for Live Streaming</string>
     <string name="cancel_request_for_live_streaming">Cancel Request of Live Streaming</string>
@@ -195,8 +195,10 @@
     <string name="list_of_club">List of Club</string>
     <string name="list_of_dj">List of DJ</string>
     <string name="txt_event">Event</string>
-    <string name="events_near_you">Events near you</string>
+    <string name="events_near_you">Clubs near you</string>
     <string name="txt_suggested">Suggested</string>
     <string name="daily">Daily</string>
     <string name="email_send_success_fully">Email sedn success fully</string>
+    <string name="txt_live">Live</string>
+    <string name="delete_image_msg">Are you sure\nyou want to delete image?</string>
 </resources>
