--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,10 @@
     <!-- TODO: Remove or change this placeholder text -->
 
     <string name="google_place_key" translatable="false">AIzaSyBEB2zJn18Cv4Djrmn8sEgbGgLa_2EKKdE</string>
+    <string name="facebook_app_id">2652750718116486</string>
+    <string name="fb_login_protocol_scheme">fb2652750718116486</string>
+
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="upcoming_live_stream">Upcoming\nLive Stream</string>
     <string name="live_stream">Live Stream</string>
