--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -218,4 +218,9 @@
     <string name="select_opening_time">Select Opening Time</string>
     <string name="select_closing_time">Select Closing Time</string>
     <string name="select_club_type">Select Club Type</string>
+    <string name="txt_login_msg">Thank you for registered with us. When Admin will approve, you will be able to login here.</string>
+    <string name="term_privacy_msg">By clicking SignUp you agree to our Privacy Policy and Terms &amp; Condition.</string>
+    <string name="privacy_policy">Privacy Policy</string>
+    <string name="terms_cond">Terms &amp; Condition</string>
+    <string name="accept_privacy_terms_msg">Accept Privacy Policy and Terms &amp; Condition.</string>
 </resources>
